syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";

message Calculator {
    int32 number_1 = 1;
    int32 number_2 = 2;
}

message CalculatorRequest {
    Calculator calculator = 1;
}

message CalculatorResponse {
    string result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_factor = 1;
}

service CalculatorService {
    rpc Sum (CalculatorRequest) returns (CalculatorResponse);
    // server streaming
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) 
    returns (stream PrimeNumberDecompositionResponse);
}